syntax = "proto3";
import "DTO/ticket.proto";

option csharp_namespace = "Proto.Requests.Tickets";

message GetAllTicketsRequestProto {}

message GetTicketsForCurrentSprintRequestProto {}

message GetTicketsWithShowAllSwitchRequestProto {
  bool is_show_all = 1;
}

message GetTicketByIdRequestProto {
  string ticket_id = 1;
}

message TicketListProto {
  repeated TicketProto tickets = 1;
}

service TicketProtoRequestService {
  rpc GetTicketById(GetTicketByIdRequestProto) returns (TicketProto);
  rpc GetAllTickets(GetAllTicketsRequestProto) returns (TicketListProto);
  rpc GetTicketsForCurrentSprint(GetTicketsForCurrentSprintRequestProto) returns (TicketListProto);
  rpc GetTicketsWithShowAllSwitch(GetTicketsWithShowAllSwitchRequestProto) returns (TicketListProto);
}
